# Aetheric-Edge

./: .gitignore  Cargo.toml  LICENSE  PLUGIN_MANAGEMENT.md  README.md  ci_debug.sh  install.ps1  install.sh  quick_check.sh  run_pipeline.sh  test_commands.sh
.github/workflows/: build.yml  ci.yml  release.yml  test.yml
docs/: PLUGIN_DIRECTORIES.md
examples/: aetheric-production.toml  aetheric-user.toml  aetheric.toml  demo.sh  install_plugin_example.rs  quick_install_plugin.sh  test_user_plugin_install.rs
scripts/: configure-bridge.sh  demo-plugin-install.sh  setup-user-dirs.sh
src/: agent_main.rs  cli_main.rs  lib.rs
src/agent/: command_handler.rs  health_monitor.rs  mod.rs  plugin_manager.rs  ssh_tunnel.rs
src/certs/: mod.rs
src/config/: mod.rs
src/mqtt/: client.rs  messages.rs  mod.rs  topics.rs
src/setup/: mod.rs  service_simple.rs
systemd/: aetheric-agent.service
tests/: integration_test.sh  mod.rs
tests/common/: mod.rs
tests/extreme/: common.rs  extreme_stress_tests.rs  mod.rs
tests/integration/: test_full_system.rs  test_mqtt_cli_e2e.rs  test_mqtt_integration.rs  test_plugin_installation.rs
tests/unit/: test_command_handler.rs  test_default_paths.rs  test_mqtt_cli.rs  test_mqtt_client.rs  test_mqtt_error_handling.rs  test_plugin_manager.rs  test_ssh_error_handling.rs  test_ssh_security.rs  test_ssh_sessions.rs  test_ssh_stress.rs  test_ssh_tunnel.rs
