[package]
name = "aetheric-edge"
version = "0.1.0"
edition = "2021"
description = "A simplified edge computing agent inspired by thin-edge.io"
license = "MIT OR Apache-2.0"
authors = ["Ramhari Gyawali <ramhari.gyawali@outlook.com>"]

[[bin]]
name = "aetheric-agent"
path = "src/agent_main.rs"

[[bin]]
name = "aetheric"
path = "src/cli_main.rs"

[dependencies]
# MQTT client with native TLS disabled for cross-compilation
rumqttc = { version = "0.24", default-features = false, features = ["use-rustls"] }
# Async runtime
tokio = { version = "1.0", features = ["full"] }
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Configuration
toml = "0.8"
# CLI
clap = { version = "4.0", features = ["derive"] }
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Error handling
anyhow = "1.0"
thiserror = "1.0"
# UUID for message IDs
uuid = { version = "1.0", features = ["v4", "serde"] }
# Cross-platform system information
sysinfo = "0.30"
# Process management
tokio-util = "0.7"
# HTTP client with rustls for cross-compilation compatibility
reqwest = { version = "0.11", default-features = false, features = ["json", "stream", "rustls-tls"] }
# File operations
tempfile = "3.0"
# Docker API - disabled on Windows due to compatibility issues  
bollard = { version = "0.15", default-features = false, features = ["time"], optional = true }
# Time handling
chrono = { version = "0.4", features = ["serde"] }
# Directory operations
dirs = "5.0"
# Hashing for checksums
md5 = "0.7"
sha1 = "0.10"
sha2 = "0.10"
# Certificate generation with default ring backend for cross-compilation
rcgen = { version = "0.12", default-features = true }
rustls-pemfile = "2.0"
# Base64 encoding/decoding
base64 = "0.22"
# Random number generation
rand = "0.8"
# X.509 certificate parsing
x509-parser = "0.16"

# Platform-specific dependencies
[target.'cfg(unix)'.dependencies]
nix = "0.27"

[target.'cfg(windows)'.dependencies]
windows-service = "0.6"
winapi = { version = "0.3", features = ["winuser", "winsvc", "winerror", "handleapi", "processthreadsapi", "winbase"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
rand = "0.8"

[features]
default = ["docker"]
docker = ["bollard"]
